# snaprecon

./: .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.toml  config.toml  pyproject.toml  requirements.txt  scope.txt  setup.py  test_scope.txt
20251013_134952/: report.html  report.md  results.json
docs/: demo-report.html
src/snaprecon/: __init__.py  analysis.py  browser.py  cli.py  config.py  cost.py  discover.py  errors.py  models.py  port_scanner.py  reporting.py  safety.py  tech.py  utils.py
templates/: report.html.j2  report.md.j2
