[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snaprecon"
version = "0.1.0"
description = "Authorized reconnaissance tool with screenshot analysis via Gemini Vision"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SnapRecon Team", email = "team@snaprecon.com"}
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "playwright>=1.40.0",
    "google-genai>=0.1.0",
    "httpx>=0.25.0",
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.0",
    "aiofiles>=23.0.0",
    "colorama>=0.4.6",
    "tqdm>=4.65.0",
]

[project.scripts]
snaprecon = "snaprecon.cli:app"
