[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snaprecon"
version = "0.1.0"
description = "Authorized reconnaissance tool with screenshots and local analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "rabbyt3s"}
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.0",
    "aiofiles>=23.0.0",
    "colorama>=0.4.6",
    "tqdm>=4.65.0",
    "orjson>=3.0.0",
    "wappalyzer>=1.0.17",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"snaprecon" = ["templates/*.j2"]

[project.scripts]
snaprecon = "snaprecon.cli:app"
